--- a/Origamid-Animais Fantasticos/index.html
+++ b/Origamid-Animais Fantasticos/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animais Fantásticos</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     
 </head>
@@ -20,7 +24,7 @@
 
     <section class="grid-section animais" id="animais">
         <h1 class="titulo">Animais Fantásticos</h1>
-        <ul>
+        <ul class="animais-lista">
             <li>
                 <img src="img/imagem1.jpg">
             </li>
@@ -78,43 +82,42 @@
                 <p>A pelagem é unicolor de coloração castanha, e os machos apresentam uma juba característica. Uma das características mais marcantes da espécie é a presença de um tufo de pelos pretos na cauda, que também possui uma espora. Habita preferencialmente as savanas e pastagens abertas, mas pode ser encontrado em regiões mais arbustivas. É um animal sociável que vive em grupos que consiste das leoas e suas crias, o macho dominante e alguns machos jovens que ainda não alcançaram a maturidade sexual. A dieta consiste principalmente de grandes ungulados e possuem hábitos noturnos e crepusculares, descansando e dormindo na maior parte do dia. Leões vivem por volta de 10-14 anos na natureza, enquanto em cativeiro eles podem viver por até 30 anos. Alguns animais desenvolveram o hábito de atacar e devorar humanos, ficando conhecidos como "devoradores de homens".</p>
                 <p>A espécie está classificada como "vulnerável" pela União Internacional para a Conservação da Natureza e dos Recursos Naturais (IUCN), e sofreu um declínio populacional de 30-50% nas últimas duas décadas no território africano. Na Ásia, o leão está confinado a uma única área protegida e sua população é estável, mas está classificado como "em perigo", já que a população não passa de 350 animais. Entre as ameaças, a perda de habitat e os conflitos com humanos são as principais razões de preocupação na sua conservação. Por centenas de anos, o leão tem sido usado como símbolo de bravura e nobreza em diversas civilizações e culturas da Europa, Ásia e África. Está amplamente representado em esculturas, pinturas, bandeiras nacionais, brasões, e em filmes e na literatura contemporâneos.</p>
             </section>
-
-            <section class="grid-section faq" id="faq">
-                <h1>FAQ</h1>
-                <dl>
-                    <dt>Qual a idade dos animais</dt>
-                    <dd>Esses animais se enquadram na classificação de mamíferos domésticos e vivem em média 12 e 15 anos podendo variar de acordo com os cuidados do tutor, características intrínsecas a cada espécie e ainda aspectos ambientais que podem influenciar fisiologicamente estes animais.</dd>
-
-                    <dt>Eles são fantásticos</dt>
-                    <dd>Claro, sim, por que não seriam?</dd>
-
-                    <dt>Qual a diferença?</dt>
-                    <dd>Os animais silvestres são os animais selvagens, aqueles encontrados na natureza, sem a influência ou sem o hábito do convívio com os seres humanos. Já os animais domésticos são aqueles que, ao longo da história, foram condicionados e acostumados a viver entre os seres humanos.</dd>
-
-                    <dt>Como proteger?</dt>
-                    <dd>Todos os animais, inclusive os que ficam em canis e os de porte grande, se possível, devem ser levados para dentro de casa e mantidos sem correntes ou coleiras. No desespero em fugir do barulho que, para eles, é ensurdecedor, muitos podem se ferir.</dd>
-                </dl>
-            </section>
-
-            <section class="grid-secttion contato" id="contato">
-                <h1>Contato</h1>
-                <div class="mapa">
-                    <img src="img/mapa.png">
-                </div>
-                <ul class="dados">
-                    <li>p3dr1n@outlook.com</li>
-                    <li>+55 (12) 99999-9999</li>
-                    <li>Rua dos Que Sonham, nº07</li>
-                    <li>São José dos Campos - SP</li>
-                </ul>
-            </section>
-
-            <footer class="copy">
-                <p>Todos os direitos reservados.</p>
-            </footer>
-
         </div>
     </section>
+
+    <section class="grid-section faq" id="faq">
+        <h1 class="titulo">FAQ</h1>
+        <dl class="faq-lista">
+            <dt>Qual a idade dos animais</dt>
+            <dd>Esses animais se enquadram na classificação de mamíferos domésticos e vivem em média 12 e 15 anos podendo variar de acordo com os cuidados do tutor, características intrínsecas a cada espécie e ainda aspectos ambientais que podem influenciar fisiologicamente estes animais.</dd>
+
+            <dt>Eles são fantásticos</dt>
+            <dd>Claro, sim, por que não seriam?</dd>
+
+            <dt>Qual a diferença?</dt>
+            <dd>Os animais silvestres são os animais selvagens, aqueles encontrados na natureza, sem a influência ou sem o hábito do convívio com os seres humanos. Já os animais domésticos são aqueles que, ao longo da história, foram condicionados e acostumados a viver entre os seres humanos.</dd>
+
+            <dt>Como proteger?</dt>
+            <dd>Todos os animais, inclusive os que ficam em canis e os de porte grande, se possível, devem ser levados para dentro de casa e mantidos sem correntes ou coleiras. No desespero em fugir do barulho que, para eles, é ensurdecedor, muitos podem se ferir.</dd>
+        </dl>
+    </section>
+
+    <section class="grid-section contato" id="contato">
+        <h1 class="titulo">Contato</h1>
+        <div class="mapa">
+            <img src="img/mapa.png">
+        </div>
+        <ul class="dados">
+            <li>p3dr1n@outlook.com</li>
+            <li>+55 (12) 99999-9999</li>
+            <li>Rua dos Que Sonham, nº07</li>
+            <li>São José dos Campos - SP</li>
+        </ul>
+    </section>
+
+    <footer class="copy">
+        <p>Todos os direitos reservados.</p>
+    </footer>
 
     <script src="JS/script.js"></script>
 </body>
